package Polymorphism;

public class Animal {
    public String speak(){
        return "";
    }


}
