package Polymorphism;

public class Cat extends Animal{
    public String speak(){
        return "Meaw!";
    }

}
