package Polymorphism;

public class Dog extends Animal{
    public String speak(){
        return "Woof!";
    }

}
