package Polymorphism;

public class Duck extends Animal{
    public String speak(){
        return "Quack";
    }

}
